plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.gatling.gradle' version '3.11.5'
}

group = 'ru.ulstu'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral();
}

gatling {
    jvmArgs = [
            '-server',
            '-Xms1024m', // Initial heap size (e.g., 1GB)
            '-Xmx4096m', // Maximum heap size (e.g., 4GB)
            '-XX:+HeapDumpOnOutOfMemoryError'
    ]
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.4'

    implementation group: 'com.h2database', name: 'h2'
    implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.2'

    implementation("org.springframework.boot:spring-boot-starter-actuator")
    implementation("io.micrometer:micrometer-registry-prometheus")
    implementation("io.gatling:gatling-app:3.14.9")
    implementation("io.gatling.highcharts:gatling-charts-highcharts:3.14.9")

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testImplementation 'org.assertj:assertj-core'
    testImplementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.20.0'
    testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:4.20.0'
    testImplementation 'org.seleniumhq.selenium:selenium-support:4.20.0'
    testImplementation 'org.seleniumhq.selenium:selenium-remote-driver:4.20.0'
    testImplementation 'org.seleniumhq.selenium:selenium-api:4.20.0'

    // WebDriverManager
    testImplementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
}

